istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ml-app-dr
spec:
  host: ml-app-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
    loadBalancer:
      simple: ROUND_ROBIN
